src/objects/Zquote_Mapping__c.object
<CustomObject>
    <fields>
        <fullName>Quote_Material_1Y_R__c</fullName>
        <label>Quote Material 1Y -R</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Quote_Material_3Y_R__c</fullName>
        <label>Quote Material 3Y -R</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Quote_Material_5Y_R__c</fullName>
        <label>Quote Material 5Y -R</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Refernce_Material_R__c</fullName>
        <label>Refernce Material -R</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <label>Zquote Mapping</label>
    <nameField>
        <label>Zquote Mapping Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Zquote Mappings</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>